--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "nodemailer": "^7.0.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "whatsapp-clone---1-final": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
