--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "build:full": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
