--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "postinstall": "if (Test-Path ../frontend/dist) { Remove-Item -Recurse -Force ./public; Copy-Item ../frontend/dist ./public -Recurse }"
+    "postinstall": "rm -rf ./public && cp -r ../frontend/dist ./public"
   },
   "keywords": [],
   "author": "",
