--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "build:full": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && rm -rf backend/public && cp -r frontend/dist backend/public",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
