--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "socket.io-client": "^4.8.1",
     "whatsapp-clone": "file:..",
     "whatsapp-clone---1-final": "file:..",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "vite": "^5.4.19"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -35,7 +37,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.19"
+    "tailwindcss": "^3.4.15"
   }
 }
