--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,17 +18,16 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
+    "vite": "^5.4.19",
     "whatsapp-clone": "file:..",
     "whatsapp-clone---1-final": "file:..",
-    "zustand": "^5.0.1",
-    "vite": "^5.4.19"
-
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.5.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "eslint": "^9.13.0",
