--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-  "build": "npm install --prefix frontend --production=false && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend"
+  "build": "npm install --prefix frontend --production=false && npm install --prefix backend --production=false && npm run build --prefix frontend",
+  "start": "npm install --prefix backend && npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
